tests/errors/other/test_tc_other_07_import_selective_not_selected.pc
#import std.console.(println)
int main() {
    print("hello");
}
